--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,6 @@ body {
   font-family: 'Kdam Thmor Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(
-    to left,
-    rgba(7, 27, 82, 1) 0%,
-    rgba(0, 128, 128, 1) 100%
-  );
   text-align: center;
-}
-
-.app-title {
-  margin-top: 75px;
-  margin-bottom: 50px;
-  font-size: 76px;
-  color: #0ccac4;
+  background-color: #25282f;
 }
